start rewriting GUI